Ammended code to solve the restat button not showing and the game not stopping properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,6 +410,10 @@ button {
     justify-content: center;
 }
 
+#restart-button {
+    display: none;
+  }
+
 /* Footer */
 
 footer {
